--- a/routes/views/calc.html
+++ b/routes/views/calc.html
@@ -21,12 +21,13 @@
         <button class="btn" value="2" onclick="press(2)">2</button>
         <button class="btn" value="3" onclick="press(3)">3</button>
         <button class="btn operator" value="-" onclick="operator('-')">-</button>
+        <button class="btn null" value="" onclick="operator('я же говорил, донт клик')">don`t click</button>
         <button class="btn" value="0" onclick="press(0)">0</button>
-        <button class="btn" value="." onclick="press('.')">.</button>
-        <button class="btn" value="P" onclick="press(3.14)">P</button>
-        <button class="btn clear" value="clear" onclick="clearInput()">C</button>
-        <button class="btn equal" value="=" onclick="res()">=</button>
+        <button class="btn" value="P" onclick="press(3.14)">𝝅</button>
         <button class="btn operator" value="+" onclick="operator('+')">+</button>
+        <button class="btn glyphicon" value="glyphicon" onclick="clearInput()">C</button>
+        <button class="btn" value="." onclick="press('.')">.</button>
+        <button class="btn equal" value="=" onclick="res()">=</button>
     </div>
 </div>
 <script src="/script.js"></script>
