--- a/routes/views/calc.html
+++ b/routes/views/calc.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
+     <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <title>Калькулятор</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<div class="calculator">
-    <input type="text" id="display" class="display" disabled>
-    <div class="buttons">
+  <div class="container">
+    <div class="calculator">
+     <input type="text" id="display" class="display" disabled>
+     <div class="buttons">
         <button class="btn" value="7" onclick="press(7)">7</button>
         <button class="btn" value="8" onclick="press(8)">8</button>
         <button class="btn" value="9" onclick="press(9)">9</button>
@@ -29,7 +34,13 @@
         <button class="btn" value="." onclick="press('.')">.</button>
         <button class="btn equal" value="=" onclick="res()">=</button>
     </div>
-</div>
-<script src="/script.js"></script>
+ </div>   
+ <div class="line"></div>
+<div class="horizontal-line"></div>
+ <img src="https://cdn2.hexlet.io/assets/hexlet_logo-4e7b643fd7cbe42da81624aba2faa9267523b2b925d5b576536e05d061659083.png">
+<div class="linne"></div>
+ <img src="https://cdn-icons-png.flaticon.com/128/3502/3502458.png">
+ <head><img class="image" src="https://sun9-64.userapi.com/impg/9KYmA7iAEbg4bEI7qMnR1q0kM2fsU5DvtRoMnQ/1DZsJUV5dn8.jpg?size=1147x554&quality=96&sign=8937dfb77960c38d1fcf10e512c06dbf&type=album"></head>
+ <script src="/script.js"></script>
 </body>
 </html>
