--- a/routes/views/style.css
+++ b/routes/views/style.css
@@ -25,12 +25,13 @@ body {
     .display {
     width: 100%;
     height: 50px;
-    margin-bottom: 10px;
+    margin-bottom: 40px;
     background-color: #555;
     color: white;
     text-align: right;
     padding-right: 10px;
     font-size: 20px;
+    border-radius: 40% 10% 45%;
     }
     
     .buttons {
@@ -44,7 +45,7 @@ body {
     color: white;
     border: none;
     font-size: 15px;
-    padding: 10px;
+    padding: 15px;
     border: 2px outset black;
     border-radius: 20% 10% 40%;
     }
@@ -118,8 +119,8 @@ body {
     }
     .image {
         display: block;
-        margin: 1px 700px;
-        width: 750px;
+        margin: 1px 900px;
+        width: 860px;
         height: 400px;
       }
       .glyphicon {
